# jupyterlab-remote-data

./: LICENSE  pyproject.toml  readme.md
jupyterlab-datarenderer/: README.md  package.json
jupyterlab-datarenderer/src/: factories.ts  index.ts  mimerenderer.ts  registry.ts  renderers.ts
jupyterlab-remote-data/: README.md  package.json  tsconfig.json
jupyterlab-remote-data/src/: cog.ts  extension.ts  factories.ts  geotiff.ts  index.ts  plotty.d.ts  registry.ts  renderers.ts  renderers.tsx
jupyterlab-remote-data/style/: index.css
remotecontentmanager/: __init__.py
